--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -21,9 +21,10 @@
                     <option value='priceAsc'>Giá tăng dần</option>
                 </select>
             </div>
-        </div>        
+        </div>
         <div class="row" *ngIf="totalLength==0">
-            <h1 class="text-center" style="margin-top: 25%; font-size: 50px; min-height: 500px;">Không tìm thấy sản phẩm phù hợp !</h1>
+            <h1 class="text-center" style="margin-top: 25%; font-size: 50px; min-height: 500px;">Không tìm thấy sản phẩm
+                phù hợp !</h1>
         </div>
         <div class="row" *ngIf="isLoading">
             <div class="pull-right label label-info row col" style="min-height: 700px !important;">
@@ -33,9 +34,10 @@
                 </div>
             </div>
         </div>
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-5 justify-content-center" *ngIf="!isLoading && totalLength!=0">
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-5 justify-content-center"
+            *ngIf="!isLoading && totalLength!=0">
             <div class="col mb-3 p-2"
-                *ngFor="let item of products | orderBy : key : reverse | paginate: { itemsPerPage: 15, currentPage: page} ">
+                *ngFor="let item of products | orderBy : key : reverse | paginate: { itemsPerPage: 10, currentPage: page} ">
                 <div class="card h-100" style="box-shadow: 0 3px 2px rgba(218, 218, 218, 0.562); border-radius: 8px;">
                     <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
@@ -51,7 +53,9 @@
                                 style="font-size: 14px; text-decoration: none; color: teal;">{{item.name}}</a>
                             <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
-                                <ngb-rating class="mb-2" [rate]="getStar(item.productId)" title="{{getStar(item.productId)}} sao" [starTemplate]="t" [readonly]="true" [max]="5"></ngb-rating>
+                                <ngb-rating class="mb-2" [rate]="getStar(item.productId)"
+                                    title="{{getStar(item.productId)}} sao" [starTemplate]="t" [readonly]="true"
+                                    [max]="5"></ngb-rating>
                             </div>
                             <!-- Product price-->
                             <span class="text-muted text-decoration-line-through"
@@ -61,7 +65,8 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" (click)="addCart(item.productId, item.price*(1 - item.discount/100))">Add to cart</a>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto"
+                                (click)="addCart(item.productId, item.price*(1 - item.discount/100))">Add to cart</a>
                         </div>
                     </div>
                 </div>
